@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2007-12  The R Core Team
+ *  Copyright (C) 2007-2016  The R Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -83,6 +83,8 @@
  *    create backend definition (QuartzBackend_t backend) -> 
  *    fn->Create(dd, &backend), return the result
  */
+
+/* Unix-only header */
 
 #ifndef R_EXT_QUARTZDEVICE_H_
 #define R_EXT_QUARTZDEVICE_H_
